--- a/WeToken.html
+++ b/WeToken.html
@@ -18,7 +18,7 @@
 <div class = "mainbox" >
 <div class="box_left">
     <div class="bl_img">
-        <img src="/public/images/Ethereum.png" width="400px">
+        <img src="./public/images/Ethereum.png" width="400px">
     </div>
    <div class="bl_con">
         <dt >ICO 시작 시간:</dt>
